[package]
name = "slquickemu"
version = "0.1.0"
authors = ["HC <hc900@hackerlan.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.7"
serde_yaml = "0.8.14"
clap = "2"
serde = { version = "1.0", features = ["derive"] }
num_cpus = "1.13.0"
log = "0.4"
pretty_env_logger = "0.4"
directories = "3.0.1"
#our new config file reader
config = "0.10.1"